mise en forme HP

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,37 +1,156 @@
 <!DOCTYPE html>
 <html lang="fr">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="main.css" />
-        <link
-            href="https://fonts.googleapis.com/css?family=Croissant+One%7CDancing+Script%7CDevonshire%7CKalam%7CKaushan+Script%7CNoto+Serif:700%7CRoboto:400,900%7CSriracha&display=swap"
-            rel="stylesheet">
-            <script src="https://kit.fontawesome.com/779ac07472.js" crossorigin="anonymous"></script>    
-        <title>Orinoco</title>
-    </head>
 
-    <body>
-        
-        <header>
-            <nav>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="main.css" />
+    <link
+        href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Pacifico&family=Roboto:ital,wght@0,400;0,700;1,500&display=swap"
+        rel="stylesheet">
+    <script src="https://kit.fontawesome.com/779ac07472.js" crossorigin="anonymous"></script>
+    <title>Orinoco</title>
+</head>
 
-            </nav>
-        </header>
-        <div id="wrap">
-            <section>
-                <article>blablabla</article>
-                <article>blablabla</article>
-                <article>blablabla</article>
-                <article>blablabla</article>
-                <article>blablabla</article>
-                <article>blablabla</article>
-            </section>
-        </div>
-        <footer>
-
-        </footer>
-    </body>
-    <script text="text/javascript" src="base.js"></script>
+<body>
+    <header>
+        <h1>Orinoco</h1>
+        <nav>
+            <div id="icon-content">
+                <div id="icon-home"><i class="fas fa-home"></i></div>
+                <div id="icon-cart"><i class="fas fa-shopping-bag"></i></div>
+            </div>
+        </nav>
+    </header>
+    <div id="wrap">
+        <section>
+            <!--premier article-->
+            <article class="article article__first">
+                <div>
+                    <h2>Nom Ours</h2>
+                </div>
+                <div><img src=></div>
+                <div class="infos">
+                    <div class="description">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident id odit dolores
+                            accusamus, aperiam, consectetur labore est dicta eos quis nam ab minus ratione facere ipsum
+                            sapiente sint! Ducimus, consequuntur.</p>
+                    </div>
+                    <div class="align">
+                        <div class="prix">
+                            <p>25€</p>
+                        </div>
+                        <div class="want-some">
+                            <input id="ajouter" type="button" value="Je le veux !">
+                            <i class="fas fa-heart"></i></input>
+                        </div>
+                    </div>
+                </div>
+            </article>
+            <!--second article-->
+            <article class="article article__two">
+                <div>
+                    <h2>Nom Ours</h2>
+                </div>
+                <div><img src=""></div>
+                <div class="infos">
+                    <div class="description">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident id odit dolores
+                            accusamus, aperiam, consectetur labore est dicta eos quis nam ab minus ratione facere ipsum
+                            sapiente sint! Ducimus, consequuntur.</p>
+                    </div>
+                    <div class="align">
+                        <div class="prix">
+                            <p>25€</p>
+                        </div>
+                        <div class="want-some">
+                            <input id="ajouter" type="button" value="Je le veux !">
+                            <i class="fas fa-heart"></i></input>
+                        </div>
+                    </div>
+                </div>
+            </article>
+            <!--troisieme article-->
+            <article class="article article__three">
+                <div>
+                    <h2>Nom Ours</h2>
+                </div>
+                <div><img src=""></div>
+                <div class="infos">
+                    <div class="description">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident id odit dolores
+                            accusamus, aperiam, consectetur labore est dicta eos quis nam ab minus ratione facere ipsum
+                            sapiente sint! Ducimus, consequuntur.</p>
+                    </div>
+                    <div class="align">
+                        <div class="prix">
+                            <p>25€</p>
+                        </div>
+                        <div class="want-some">
+                            <input id="ajouter" type="button" value="Je le veux !">
+                            <i class="fas fa-heart"></i></input>
+                        </div>
+                    </div>
+                </div>
+            </article>
+            <!--quatrieme article-->
+            <article class="article article__four">
+                <div>
+                    <h2>Nom Ours</h2>
+                </div>
+                <div><img src=""></div>
+                <div class="infos">
+                    <div class="description">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident id odit dolores
+                            accusamus, aperiam, consectetur labore est dicta eos quis nam ab minus ratione facere ipsum
+                            sapiente sint! Ducimus, consequuntur.</p>
+                    </div>
+                    <div class="align">
+                        <div class="prix">
+                            <p>25€</p>
+                        </div>
+                        <div class="want-some">
+                            <input id="ajouter" type="button" value="Je le veux !">
+                            <i class="fas fa-heart"></i></input>
+                        </div>
+                    </div>
+                </div>
+            </article>
+            <!--cinquieme article-->
+            <article class="article article__five">
+                <div>
+                    <h2>Nom Ours</h2>
+                </div>
+                <div><img src=""></div>
+                <div class="infos">
+                    <div class="description">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident id odit dolores
+                            accusamus, aperiam, consectetur labore est dicta eos quis nam ab minus ratione facere ipsum
+                            sapiente sint! Ducimus, consequuntur.</p>
+                    </div>
+                    <div class="align">
+                        <div class="prix">
+                            <p>25€</p>
+                        </div>
+                        <div class="want-some">
+                            <input id="ajouter" type="button" value="Je le veux !">
+                            <i class="fas fa-heart"></i></input>
+                        </div>
+                    </div>
+                </div>
+            </article>
+        </section>
+    </div>
+    <footer>
+        <ul>
+            <li>A propos</li>
+            <li>Contact</li>
+            <li>Mentions légales</li>
+            <li>CGV</li>
+        </ul>
+    </footer>
+    <div id="ours-dessin"><img src="image/ours-dessin.jpg" alt="ours dessin"></div>
+</body>
+<script text="text/javascript" src="base.js"></script>
 
 </html>
