refonte css, mise en place du js

--- a/frontend/article.html
+++ b/frontend/article.html
@@ -13,12 +13,21 @@
 </head>
 
 <body>
+    <!--popup alert-->
+    <div id="popup"></div>
+    <div id="popup-content">
+        <div>
+            <div id="popup-head"></div>
+            <div id="popup-text"></div>
+        </div>
+    </div>
+    <!--/////////////////-->
+
     <header>
         <div id="orinoco" >
-            <img src="image/logo.png">
+            <img src="image/logo.png" alt="logo">
         </div>
     </header>
-
     <nav id="navigation">
         <a href="#wrap" id="open">
             <i class="fas fa-bars"></i>
@@ -50,14 +59,11 @@
           </nav>
         </div>
     </div>
-
-    <section id="catalogue">
-        <h1>Nos ours à adopter</h1>
-        <div id="content-catalogue">
-            <div id="ensemble-article"></div>
-        </div>
-    </section>
-
+    <div id="content">
+        <section id="fiche-produit">
+ 
+        </section>
+    </div>
     <footer>
         <ul>
             <li>A propos</li>
@@ -68,6 +74,6 @@
     </footer>
     <div id="ours-dessin"><img src="image/ours-dessin.jpg" alt="ours dessin"></div>
 </body>
-<script text="text/javascript" src="home.js"></script>
+<script type="text/javascript" src="article.js"></script>
 
 </html>
