--- a/frontend/article.html
+++ b/frontend/article.html
@@ -36,7 +36,7 @@
             <div id="icon-left">
                 <div id="icon-home"><a href="home.html"><i class="fas fa-home"></i></a></div>
                 <div class="camera-icon"><a href="#"></a><i class="fas fa-camera"></i></div>
-                <div class="svg-ours"><a href="index.html"></a></div>
+                <div class="svg-ours"><a href="index.html">blablabl</a></div>
                 <div class="svg-meuble"><a href="#"></a></div>
             </div>
             <div id="icon-right">
