ajout page confirmation commande

--- a/frontend/confirmation.html
+++ b/frontend/confirmation.html
@@ -59,45 +59,14 @@
           </nav>
         </div>
     </div>
+    <div id="black"></div>
+
     <div id="content">
-        <h2>Votre commande</h2>
-        <section id="card">
-            <div id="card-back">
-            </div>
-        </section>
-        <h2>Vos coordonnées</h2>
-        <section id="contact">
-            <div id="contact-back">    
-                <form>
-                    <table>
-                        <tr>
-                            <td class="label"><p><label>Nom </label></p></td>
-                            <td><input class="input" id="contact-nom" type="text" name="nom"  value="Nom" required></td>
-                        </tr>
-                        <tr>
-                            <td class="label"><p><label>Prénom </label></p></td>
-                            <td><input class="input" id="contact-prenom" type="text" name="prenom" required></td>
-                        </tr>
-                        <tr>
-                            <td class="label"><p><label>Adresse </label></p></td>
-                            <td><input class="input" id="contact-adresse" type="text" name="adresse" required></td>
-                        </tr>
+        <section id="confirm">
 
-                        <tr>
-                            <td class="label"><p><label>Ville  </label></p></td>
-                            <td><input class="input" id="contact-ville" type="text" name="ville" required></td>
-                        </tr>
-                        <tr>
-                            <td class="label"><p><label>Email  </label></p></td>
-                            <td><input class="input" id="contact-mail" type="text" name="email" required></td>
-                        </tr>               
-                    </table>
-                    <button id="envoyer">Envoyer</button>
-
-                </form>
-            </div>
         </section>
-    </div>
+    </div>    
+    
     <footer>
         <ul>
             <li>A propos</li>
@@ -108,6 +77,6 @@
     </footer>
     <div id="ours-dessin"><img src="image/ours-dessin.jpg" alt="ours dessin"></div>
 </body>
-<script type="text/javascript" src="card.js"></script>
+<script type="text/javascript" src="confirm.js"></script>
 
 </html>
