correctif nav / alert

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -27,7 +27,7 @@
             <div id="icon-left">
                 <div id="icon-home"><a href="home.html"><i class="fas fa-home"></i></a></div>
                 <div class="camera-icon"><a href="#"></a><i class="fas fa-camera"></i></div>
-                <div class="svg-ours"><a href="index.html"></a></div>
+                <a href="index.html" id="ours"><div class="svg-ours"></div></a>
                 <div class="svg-meuble"><a href="#"></a></div>
             </div>
             <div id="icon-right">
