--- a/frontend/card.html
+++ b/frontend/card.html
@@ -36,7 +36,7 @@
             <div id="icon-left">
                 <div id="icon-home"><a href="home.html"><i class="fas fa-home"></i></a></div>
                 <div class="camera-icon"><a href="#"></a><i class="fas fa-camera"></i></div>
-                <div class="svg-ours"><a href="index.html">blablabl</a></div>
+                <a href="index.html" id="ours"><div class="svg-ours"></div></a>
                 <div class="svg-meuble"><a href="#"></a></div>
             </div>
             <div id="icon-right">
@@ -72,7 +72,7 @@
                     <table>
                         <tr>
                             <td class="label"><p><label>Nom </label></p></td>
-                            <td><input class="input" id="contact-nom" type="text" name="nom"  value="Nom" required></td>
+                            <td><input class="input" id="contact-nom" type="text" name="nom" required></td>
                         </tr>
                         <tr>
                             <td class="label"><p><label>Prénom </label></p></td>
