correctifs page article/formulaire

--- a/frontend/card.html
+++ b/frontend/card.html
@@ -68,7 +68,7 @@
         <h2>Vos coordonnées</h2>
         <section id="contact">
             <div id="contact-back">    
-                <form>
+                <form id="formulaire">
                     <table>
                         <tr>
                             <td class="label"><p><label>Nom </label></p></td>
@@ -92,7 +92,7 @@
                             <td><input class="input" id="contact-mail" type="text" name="email" required></td>
                         </tr>               
                     </table>
-                    <button id="envoyer">Envoyer</button>
+                    <button id="envoyer" type="submit">Envoyer</button>
 
                 </form>
             </div>
