nettoyage ensemble fichiers / ajout de commentaires

--- a/frontend/article.html
+++ b/frontend/article.html
@@ -13,18 +13,8 @@
 </head>
 
 <body>
-    <!--popup alert-->
-    <div id="popup"></div>
-    <div id="popup-content">
-        <div>
-            <div id="popup-head"></div>
-            <div id="popup-text"></div>
-        </div>
-    </div>
-    <!--/////////////////-->
-
     <header>
-        <div id="orinoco" >
+        <div id="orinoco">
             <img src="image/logo.png" alt="logo">
         </div>
     </header>
@@ -36,32 +26,33 @@
             <div id="icon-left">
                 <div id="icon-home"><a href="home.html"><i class="fas fa-home"></i></a></div>
                 <div class="camera-icon"><a href="#"></a><i class="fas fa-camera"></i></div>
-                <a href="index.html" id="ours"><div class="svg-ours"></div></a>
+                <a href="index.html" id="ours">
+                    <div class="svg-ours"></div>
+                </a>
                 <div class="svg-meuble"><a href="#"></a></div>
             </div>
             <div id="icon-right">
                 <div id="icon-card-align">
                     <div><a href="card.html"><i class="fas fa-shopping-bag"></i></a></div>
                     <div class="card-nbr"></div>
-                </div> 
+                </div>
             </div>
         </div>
     </nav>
     <!--Affichage menu mobile-->
     <div id="wrap">
         <div class="burger">
-          <nav class="nav">
-            <a href="#" id="close">×</a>
-            <a href="home.html">Home</a>
-            <a href="#">Caméras</a>
-            <a href="index.html">Ours en peluche</a>
-            <a href="#">Meubles en chêne</a>
-          </nav>
+            <nav class="nav">
+                <a href="#" id="close">×</a>
+                <a href="home.html">Home</a>
+                <a href="#">Caméras</a>
+                <a href="index.html">Ours en peluche</a>
+                <a href="#">Meubles en chêne</a>
+            </nav>
         </div>
     </div>
     <div id="content">
         <section id="fiche-produit">
- 
         </section>
     </div>
     <footer>
@@ -74,6 +65,7 @@
     </footer>
     <div id="ours-dessin"><img src="image/ours-dessin.jpg" alt="ours dessin"></div>
 </body>
+<script type="text/javascript" src="function_pastille.js"></script>
 <script type="text/javascript" src="article.js"></script>
 
 </html>
