--- a/frontend/home.html
+++ b/frontend/home.html
@@ -12,34 +12,41 @@
     <title>Orinoco</title>
 </head>
 
-<body id="HP"> 
+<body id="HP">
     <div id="wrap-home">
-        <div id="logo" >
+        <div id="logo">
             <img src="image/logo.png" alt="logo">
         </div>
         <section id="section-home">
             <article id="camera">
-                <i class="fas fa-camera"></i>
+                <i class="fas fa-camera"></i>|
                 <h2 class="envie">J'ai envie de créer…</h2>
                 <div class="acces-pages">
-                    <a href="#"><p>Let's go !</p></a>
+                    <a href="#">
+                        <p>Let's go !</p>
+                    </a>
                 </div>
             </article>
             <article id="bear">
                 <div class="svg-bear"></div>
                 <h2 class="envie">J'ai envie de câliner…</h2>
                 <div class="acces-pages">
-                    <a href="index.html"><p>Let's go !</p></a>
+                    <a href="index.html">
+                        <p>Let's go !</p>
+                    </a>
                 </div>
             </article>
             <article id="furniture">
                 <div class="svg-furniture"></div>
                 <h2 class="envie">J'ai envie de ranger…</h2>
                 <div class="acces-pages">
-                    <a href="#"><p>Let's go !</p></a>
+                    <a href="#">
+                        <p>Let's go !</p>
+                    </a>
                 </div>
             </article>
-    </section>
+        </section>
     </div>
 </body>
+
 </html>
