--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,11 +14,10 @@
 
 <body>
     <header>
-        <div id="orinoco" >
+        <div id="orinoco">
             <img src="image/logo.png">
         </div>
     </header>
-
     <nav id="navigation">
         <a href="#wrap" id="open">
             <i class="fas fa-bars"></i>
@@ -27,37 +26,37 @@
             <div id="icon-left">
                 <div id="icon-home"><a href="home.html"><i class="fas fa-home"></i></a></div>
                 <div class="camera-icon"><a href="#"></a><i class="fas fa-camera"></i></div>
-                <a href="index.html" id="ours"><div class="svg-ours"></div></a>
+                <a href="index.html" id="ours">
+                    <div class="svg-ours"></div>
+                </a>
                 <div class="svg-meuble"><a href="#"></a></div>
             </div>
             <div id="icon-right">
                 <div id="icon-card-align">
                     <div><a href="card.html"><i class="fas fa-shopping-bag"></i></a></div>
                     <div class="card-nbr"></div>
-                </div> 
+                </div>
             </div>
         </div>
     </nav>
     <!--Affichage menu mobile-->
     <div id="wrap">
         <div class="burger">
-          <nav class="nav">
-            <a href="#" id="close">×</a>
-            <a href="home.html">Home</a>
-            <a href="#">Caméras</a>
-            <a href="index.html">Ours en peluche</a>
-            <a href="#">Meubles en chêne</a>
-          </nav>
+            <nav class="nav">
+                <a href="#" id="close">×</a>
+                <a href="home.html">Home</a>
+                <a href="#">Caméras</a>
+                <a href="index.html">Ours en peluche</a>
+                <a href="#">Meubles en chêne</a>
+            </nav>
         </div>
     </div>
-
     <section id="catalogue">
         <h1>Nos ours à adopter</h1>
         <div id="content-catalogue">
             <div id="ensemble-article"></div>
         </div>
     </section>
-
     <footer>
         <ul>
             <li>A propos</li>
@@ -68,6 +67,8 @@
     </footer>
     <div id="ours-dessin"><img src="image/ours-dessin.jpg" alt="ours dessin"></div>
 </body>
+<script text="text/javascript" src="class.js"></script>
+<script text="text/javascript" src="function_pastille.js"></script>
 <script text="text/javascript" src="home.js"></script>
 
 </html>
