--- a/frontend/confirmation.html
+++ b/frontend/confirmation.html
@@ -13,18 +13,8 @@
 </head>
 
 <body>
-    <!--popup alert-->
-    <div id="popup"></div>
-    <div id="popup-content">
-        <div>
-            <div id="popup-head"></div>
-            <div id="popup-text"></div>
-        </div>
-    </div>
-    <!--/////////////////-->
-
     <header>
-        <div id="orinoco" >
+        <div id="orinoco">
             <img src="image/logo.png" alt="logo">
         </div>
     </header>
@@ -36,27 +26,29 @@
             <div id="icon-left">
                 <div id="icon-home"><a href="home.html"><i class="fas fa-home"></i></a></div>
                 <div class="camera-icon"><a href="#"></a><i class="fas fa-camera"></i></div>
-                <div class="svg-ours"><a href="index.html">blablabl</a></div>
+                <a href="index.html" id="ours">
+                    <div class="svg-ours"></div>
+                </a>
                 <div class="svg-meuble"><a href="#"></a></div>
             </div>
             <div id="icon-right">
                 <div id="icon-card-align">
                     <div><a href="card.html"><i class="fas fa-shopping-bag"></i></a></div>
                     <div class="card-nbr"></div>
-                </div> 
+                </div>
             </div>
         </div>
     </nav>
     <!--Affichage menu mobile-->
     <div id="wrap">
         <div class="burger">
-          <nav class="nav">
-            <a href="#" id="close">×</a>
-            <a href="home.html">Home</a>
-            <a href="#">Caméras</a>
-            <a href="index.html">Ours en peluche</a>
-            <a href="#">Meubles en chêne</a>
-          </nav>
+            <nav class="nav">
+                <a href="#" id="close">×</a>
+                <a href="home.html">Home</a>
+                <a href="#">Caméras</a>
+                <a href="index.html">Ours en peluche</a>
+                <a href="#">Meubles en chêne</a>
+            </nav>
         </div>
     </div>
     <div id="black"></div>
@@ -65,8 +57,8 @@
         <section id="confirm">
 
         </section>
-    </div>    
-    
+    </div>
+
     <footer>
         <ul>
             <li>A propos</li>
