page d'entree des 3 types de produits en index

--- a/frontend/article.html
+++ b/frontend/article.html
@@ -24,9 +24,9 @@
         </a>
         <div id="icon-content">
             <div id="icon-left">
-                <div id="icon-home"><a href="home.html"><i class="fas fa-home"></i></a></div>
+                <div id="icon-home"><a href="index.html"><i class="fas fa-home"></i></a></div>
                 <div class="camera-icon"><a href="#"></a><i class="fas fa-camera"></i></div>
-                <a href="index.html" id="ours">
+                <a href="accueil.html" id="ours">
                     <div class="svg-ours"></div>
                 </a>
                 <div class="svg-meuble"><a href="#"></a></div>
@@ -44,9 +44,9 @@
         <div class="burger">
             <nav class="nav">
                 <a href="#" id="close">×</a>
-                <a href="home.html">Home</a>
+                <a href="index.html">Home</a>
                 <a href="#">Caméras</a>
-                <a href="index.html">Ours en peluche</a>
+                <a href="accueil.html">Ours en peluche</a>
                 <a href="#">Meubles en chêne</a>
             </nav>
         </div>
