--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,63 +12,41 @@
     <title>Orinoco</title>
 </head>
 
-<body>
-    <header>
-        <div id="orinoco">
-            <img src="image/logo.png">
+<body id="HP">
+    <div id="wrap-home">
+        <div id="logo">
+            <img src="image/logo.png" alt="logo">
         </div>
-    </header>
-    <nav id="navigation">
-        <a href="#wrap" id="open">
-            <i class="fas fa-bars"></i>
-        </a>
-        <div id="icon-content">
-            <div id="icon-left">
-                <div id="icon-home"><a href="home.html"><i class="fas fa-home"></i></a></div>
-                <div class="camera-icon"><a href="#"></a><i class="fas fa-camera"></i></div>
-                <a href="index.html" id="ours">
-                    <div class="svg-ours"></div>
-                </a>
-                <div class="svg-meuble"><a href="#"></a></div>
-            </div>
-            <div id="icon-right">
-                <div id="icon-card-align">
-                    <div><a href="card.html"><i class="fas fa-shopping-bag"></i></a></div>
-                    <div class="card-nbr"></div>
+        <section id="section-home">
+            <article id="camera">
+                <i class="fas fa-camera"></i>|
+                <h2 class="envie">J'ai envie de créer…</h2>
+                <div class="acces-pages">
+                    <a href="#">
+                        <p>Let's go !</p>
+                    </a>
                 </div>
-            </div>
-        </div>
-    </nav>
-    <!--Affichage menu mobile-->
-    <div id="wrap">
-        <div class="burger">
-            <nav class="nav">
-                <a href="#" id="close">×</a>
-                <a href="home.html">Home</a>
-                <a href="#">Caméras</a>
-                <a href="index.html">Ours en peluche</a>
-                <a href="#">Meubles en chêne</a>
-            </nav>
-        </div>
+            </article>
+            <article id="bear">
+                <div class="svg-bear"></div>
+                <h2 class="envie">J'ai envie de câliner…</h2>
+                <div class="acces-pages">
+                    <a href="accueil.html">
+                        <p>Let's go !</p>
+                    </a>
+                </div>
+            </article>
+            <article id="furniture">
+                <div class="svg-furniture"></div>
+                <h2 class="envie">J'ai envie de ranger…</h2>
+                <div class="acces-pages">
+                    <a href="#">
+                        <p>Let's go !</p>
+                    </a>
+                </div>
+            </article>
+        </section>
     </div>
-    <section id="catalogue">
-        <h1>Nos ours à adopter</h1>
-        <div id="content-catalogue">
-            <div id="ensemble-article"></div>
-        </div>
-    </section>
-    <footer>
-        <ul>
-            <li>A propos</li>
-            <li>Contact</li>
-            <li>Mentions légales</li>
-            <li>CGV</li>
-        </ul>
-    </footer>
-    <div id="ours-dessin"><img src="image/ours-dessin.jpg" alt="ours dessin"></div>
 </body>
-<script text="text/javascript" src="class.js"></script>
-<script text="text/javascript" src="function_pastille.js"></script>
-<script text="text/javascript" src="home.js"></script>
 
 </html>
