--- a/frontend/accueil.html
+++ b/frontend/accueil.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <div id="orinoco">
-            <img src="image/logo.png" alt="logo">
+            <img src="image/logo.png">
         </div>
     </header>
     <nav id="navigation">
@@ -51,14 +51,12 @@
             </nav>
         </div>
     </div>
-    <div id="black"></div>
-
-    <div id="content">
-        <section id="confirm">
-
-        </section>
-    </div>
-
+    <section id="catalogue">
+        <h1>Nos ours à adopter</h1>
+        <div id="content-catalogue">
+            <div id="ensemble-article"></div>
+        </div>
+    </section>
     <footer>
         <ul>
             <li>A propos</li>
@@ -69,6 +67,8 @@
     </footer>
     <div id="ours-dessin"><img src="image/ours-dessin.jpg" alt="ours dessin"></div>
 </body>
-<script type="text/javascript" src="confirm.js"></script>
+<script text="text/javascript" src="class.js"></script>
+<script text="text/javascript" src="function_pastille.js"></script>
+<script text="text/javascript" src="home.js"></script>
 
 </html>
