reorganisation du js en dossier

--- a/frontend/accueil.html
+++ b/frontend/accueil.html
@@ -66,9 +66,8 @@
         </ul>
     </footer>
     <div id="ours-dessin"><img src="image/ours-dessin.jpg" alt="ours dessin"></div>
+<script text="text/javascript" src="javascript/class_article.js"></script>
+<script text="text/javascript" src="javascript/function_pastille.js"></script>
+<script text="text/javascript" src="javascript/accueil.js"></script>
 </body>
-<script text="text/javascript" src="class.js"></script>
-<script text="text/javascript" src="function_pastille.js"></script>
-<script text="text/javascript" src="home.js"></script>
-
 </html>
