--- a/frontend/article.html
+++ b/frontend/article.html
@@ -64,8 +64,7 @@
         </ul>
     </footer>
     <div id="ours-dessin"><img src="image/ours-dessin.jpg" alt="ours dessin"></div>
+    <script type="text/javascript" src="javascript/function_pastille.js"></script>
+    <script type="text/javascript" src="javascript/article.js"></script>
 </body>
-<script type="text/javascript" src="function_pastille.js"></script>
-<script type="text/javascript" src="article.js"></script>
-
 </html>
