--- a/frontend/card.html
+++ b/frontend/card.html
@@ -122,10 +122,9 @@
         </ul>
     </footer>
     <div id="ours-dessin"><img src="image/ours-dessin.jpg" alt="ours dessin"></div>
+<script type="text/javascript" src="javascript/function_pastille.js"></script>
+<script type="text/javascript" src="javascript/custum_alert.js"></script>
+<script type="text/javascript" src="javascript/class_contact.js"></script>
+<script type="text/javascript" src="javascript/card.js"></script>
 </body>
-<script type="text/javascript" src="function_pastille.js"></script>
-<script type="text/javascript" src="custum_alert.js"></script>
-<script type="text/javascript" src="class.js"></script>
-<script type="text/javascript" src="card.js"></script>
-
 </html>
