--- a/frontend/confirmation.html
+++ b/frontend/confirmation.html
@@ -68,7 +68,7 @@
         </ul>
     </footer>
     <div id="ours-dessin"><img src="image/ours-dessin.jpg" alt="ours dessin"></div>
+<script type="text/javascript" src="javascript/confirm.js"></script>
 </body>
-<script type="text/javascript" src="confirm.js"></script>
 
 </html>
