indication pour la Home

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -46,6 +46,12 @@
                 </div>
             </article>
         </section>
+        <section>
+            <div id="teddies">
+                <i class="fas fa-arrow-up"></i>
+                <p>J'ai choisi de développer <br>les Ours en peluche !</p>
+            </div>
+        </section>
     </div>
 </body>
 
